# actions-cloudflare-purge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README  README.md  action.yml  entrypoint.sh  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: tests.yml
tests/: test_main.py
