[project]
    name            = "actions-cloudflare-purge"
    version         = "4.0.0"
    description     = "A GitHub Action to purge Cloudflare's cache of your site"
    readme          = "README.md"
    requires-python = ">=3.10"
    dependencies    = []

[dependency-groups]
    dev = [
    "prek>=0.4.5",
    "pytest>=8.3.5",
]

